tests/syntax/bad/testfile-semicolon-8.go
package main

func main() {
  false
  && true
}
